--- a/index.html
+++ b/index.html
@@ -1,15 +1,85 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            #profile-photo{
-                height:150px;
-                width:150px;
-            }
-        </style>
-    </head>
-    <body>
-        <img id='profile-photo' src='assets/Capture.PNG' alt='photo' >
-        <h1>Marco Paolo Lambino</h1>
-        <hr>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Marco's Website</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<link rel="stylesheet" href="">-->
+    <style>
+        #profile-photo {
+            height: 150px;
+            width: 150px;
+        }
+    </style>
+</head>
+
+<body>
+    <table>
+        <tr>
+            <td><img id='profile-photo' src='assets/Capture.PNG' alt='photo'></td>
+            <td><h1>Marco Paolo Lambino</h1>
+                <em>Project Manager at Demosho</em>
+                <p>Trying to get my career in the right path by studying web and software development from scratch through
+                    bootcamps, courses and personal projects.</p>
+                </td>
+        </tr>
+    </table>
+    <br>
+    <a href='contacts.html'>Contact Me</a>
+    
+    <hr>
+    
+    <h3><u>Education</u></h3>
+
+    <table border='1'>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>School</th>
+            </tr>
+        </thead>
+        <tr>
+            <td>2011 - 2015</td>
+            <td>Mapua Institute of Technology - BS Computer Science</td>
+        </tr>
+        <tr>
+            <td>2007 - 2011</td>
+            <td>Dr. Yanga's Colleges Inc.</td>
+        </tr>
+    </table>
+    <h3><a href='hobbies.html'>Hobbies</a> </h3>
+    <h3><u>Skills</u></h3>
+    <table>
+        <tr>
+            <td>
+                <table>
+                    <tr>
+                        <td>Python</td>
+                        <td>⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>HTML</td>
+                        <td>⭐</td>
+                    </tr>
+                    </table>
+            </td>
+            <td>
+                <table>
+                    <tr>
+                        <td>CSS</td>
+                        <td>⭐</td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript</td>
+                        <td>⭐</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
+
 </html>
