--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,7 @@
         <p><a href="mailto:lambinomarco@gmail.com">Email</a></p>
         <p><a href='https://www.linkedin.com/in/marco-lambino/'>LinkedIn</a></p>
         <p><a href='https://www.facebook.com/kufururu/'>Facebook</a></p>
+        <p>end</p>
 
         <p>Contact me</p>
         <form action='mailto:valconitrate@gmail.com' method='post' enctype="text/plain">
