--- a/contacts.html
+++ b/contacts.html
@@ -6,13 +6,12 @@
         <title>Contact Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <p><a href="mailto:lambinomarco@gmail.com">Email</a></p>
         <p><a href='https://www.linkedin.com/in/marco-lambino/'>LinkedIn</a></p>
         <p><a href='https://www.facebook.com/kufururu/'>Facebook</a></p>
-        <p>end</p>
         <hr>
 
         <p>Contact me</p>
