--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,7 @@
         <title>Hobbies</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href=""> -->
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <h3>Hobbies</h3>
