--- a/index.html
+++ b/index.html
@@ -9,102 +9,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel='icon' href='CSS/favicon.ico'>
-    
+
 </head>
 
-<body'>
+<body>
     <table>
         <tr>
             <td><img id='profile-photo' src='assets/Capture.PNG' alt='photo'></td>
-            <td><h1>Marco Paolo Lambino</h1>
+            <td>
+                <h1>Marco Paolo Lambino</h1>
                 <em>Project Manager at Demosho</em>
-                <p>Trying to get my career in the right path by studying web and software development from scratch through
-                    bootcamps, courses and personal projects.</p>
-                </td>
+            </td>
         </tr>
     </table>
-    
+
     <hr>
-    <h3><u>Wok Experience</u></h3>
-    <table border='1'>
-        <tr>
-            <th>Date</th>
-            <th>Company</th>
-            <th>Title</th>
-        </tr>
-        <tr>
-            <td>2019-</td>
-            <td>Demosho</td>
-            <td>Project Manager</td>
-        </tr>
-        <tr>
-            <td>2017-2018</td>
-            <td>Teletech</td>
-            <td>Technical Care</td>
-        </tr>
-        <tr>
-            <td>2016-2017</td>
-            <td>Sykes</td>
-            <td>Technical Care and Escalations</td>
-        </tr>
-        <tr>
-            <td>2015-2016</td>
-            <td>Sitel</td>
-            <td>Customer Care and Sales, Game Maintenance</td>
-        </tr>
-    </table>
-    <hr>
-    <h3><u>Education</u></h3>
-    <table border='1'>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>School</th>
-            </tr>
-        </thead>
-        <tr>
-            <td>2011 - 2015</td>
-            <td>Mapua Institute of Technology - BS Computer Science</td>
-        </tr>
-        <tr>
-            <td>2007 - 2011</td>
-            <td>Dr. Yanga's Colleges Inc.</td>
-        </tr>
-    </table>
+    <h3><u>Summary</u></h3>
+    <p>I am a freelance Project Manager and aspiring Software Engineer with extensive experience in customer service and
+        technical support processes.
+        I have a little over 2 years of extensive training in full-stack web development with a personal inclination for
+        back-end technologies, currently taking a certification for IBM full-stack cloud development and hoping to one
+        day settle for a Data Engineering position. I currently work as a Project Manager for a video/animation company.
+    </p>
+    <p>Hoping to get one foot through the door into the IT industry.</p>
     <hr>
     <h3><u>Skills</u></h3>
-    <table>
-        <tr>
-            <td>
-                <table>
-                    <tr>
-                        <td>Python</td>
-                        <td>⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>HTML</td>
-                        <td>⭐</td>
-                    </tr>
-                    </table>
-            </td>
-            <td>
-                <table>
-                    <tr>
-                        <td>CSS</td>
-                        <td>⭐</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>⭐</td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+    <p>
+        <table id='skill-table'>
+            <tr>
+                <th>Programming Languages</th>
+                <th>Web Technologies</th>
+                <th>Data Technologies</th>
+            </tr>
+            <tr>
+                <td>Python</td>
+                <td>Django</td>
+                <td>SQL</td>
+            </tr>
+            <tr>
+                <td>Ruby</td>
+                <td>Ruby on Rails</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>React</td>
+            </tr>
+            <tr>
+                <td>Powershell, Bash</td>
+                <td>Node.JS</td>
+            </tr>
+        </table>
+    </p>
+    <hr>
+    <h3><u>Work Experience</u></h3>
+    <p>
+        <table>
+            <tr>
+                <th>Date</th>
+                <th>Company</th>
+                <th>Title</th>
+            </tr>
+            <tr>
+                <td>2019-</td>
+                <td>Demosho</td>
+                <td>Project Manager</td>
+            </tr>
+            <tr>
+                <td>2017-2018</td>
+                <td>Teletech</td>
+                <td>Technical Care</td>
+            </tr>
+            <tr>
+                <td>2016-2017</td>
+                <td>Sykes</td>
+                <td>Technical Care and Escalations</td>
+            </tr>
+            <tr>
+                <td>2015-2016</td>
+                <td>Sitel</td>
+                <td>Customer Care and Sales, Game Maintenance</td>
+            </tr>
+        </table>
+    </p>
+    <hr>
+    <h3><u>Education</u></h3>
+    <p>
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>School</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>2011 - 2015</td>
+                <td>Mapua Institute of Technology - Makati- BS Computer Science</td>
+            </tr>
+            <tr>
+                <td>2007 - 2011</td>
+                <td>Dr. Yanga's Colleges Inc. - Bulacan</td>
+            </tr>
+        </table>
+    </p>
     <hr>
     <h3><u>Other Links</u></h3>
     <a href='hobbies.html'>Hobbies</a>
-    <a href='contacts.html'>Contact Me</a> 
+    <a href='contacts.html'>Contact Me</a>
 </body>
 
 </html>
